--- a/temperature_control/.vscode/settings.json
+++ b/temperature_control/.vscode/settings.json
@@ -5,6 +5,7 @@
         "iterator": "cpp",
         "string": "cpp",
         "string_view": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "bitset": "cpp"
     }
 }
