changed temperature from byte to float and fixed bugs

--- a/temperature_control/.vscode/settings.json
+++ b/temperature_control/.vscode/settings.json
@@ -6,6 +6,7 @@
         "string": "cpp",
         "string_view": "cpp",
         "ios": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "__locale": "cpp"
     }
 }
