--- a/temperature_control/.vscode/settings.json
+++ b/temperature_control/.vscode/settings.json
@@ -7,6 +7,7 @@
         "string_view": "cpp",
         "ios": "cpp",
         "bitset": "cpp",
-        "__locale": "cpp"
+        "__locale": "cpp",
+        "chrono": "cpp"
     }
 }
